# qt-tool

./: CMakeLists.txt  CMakeSettings.json  README.md
main_window/: Algorithm.cpp  Algorithm.h  Algorithm.ui  CMakeLists.txt  Guass.cpp  Guass.h  PCPoint.cpp  PCPoint.h  cloud_repair.cpp  cloud_repair.h  main_window.cpp  main_window.h  main_window.qrc  main_window.ui  main_window.vcxproj  main_window.vcxproj.filters
